tests/expectations/compiler/async_blocks/access_async_block_future_fail.out
Error [ETYC0372154]: Cannot access argument from future produced by an `async` block.
    --> compiler-test:6:18
     |
   6 |         let y0 = f.0;
     |                  ^^^
Error [ETYC0372154]: Cannot access argument from future produced by an `async` block.
    --> compiler-test:8:18
     |
   8 |         let y1 = z.3;
     |                  ^^^
